Appened float-section comment

--- a/CSSDemo/docstream.html
+++ b/CSSDemo/docstream.html
@@ -95,6 +95,8 @@
             float属性本身最初就是想搞成我文字环绕float照片的功能
             <br>
             float(浮动模型)是一种可视化格式模型，浮动的框可以float:left 或right，<strong>直到它的外边缘碰到包含框或者另一个浮动元素的框的边缘。</strong>
+            <br>
+            完全使用 float 来实现页面的布局是很常见的
         </p>
     </div>
 </body>
