--- a/JavaScript/LocalStorageSessionStorage.html
+++ b/JavaScript/LocalStorageSessionStorage.html
@@ -33,6 +33,9 @@
             text-decoration: underline;
             background-color: orange;
         }
+        .StroageIntro{
+            margin: 30px;
+        }
         table{
             margin: auto;
         }
