Adjust category tree

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -48,10 +48,9 @@
     </header>
 
     <main>
-        <div class="WebTechArchive">
+        <div class="JavaScriptArchive">
             <ul>
-                <li><a href="./JavaScript/">JavaScript</a></li>
-                <li><a href="./HTMLAndCSS/">HTML & CSS</a></li>
+                <li><a href="./LocalStorageSessionStorage.html">Storage</a></li>
             </ul>
         </div>
     </main>
