--- a/HTMLAndCSS/index.html
+++ b/HTMLAndCSS/index.html
@@ -48,10 +48,10 @@
     </header>
 
     <main>
-        <div class="WebTechArchive">
+        <div class="HTMLAndCSSArchive">
             <ul>
-                <li><a href="./JavaScript/">JavaScript</a></li>
-                <li><a href="./HTMLAndCSS/">HTML & CSS</a></li>
+                <li><a href="./docstream.html">文档流</a></li>
+                <li><a href="./QuickRefofCSS.html">QuickRefofCSS</a></li>
             </ul>
         </div>
     </main>
