Adjust category tree

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <main>
         <div class="WebTechArchive">
             <ul>
-                <li><a href="./JavaScript/">JavaScript</a></li>
-                <li><a href="./HTMLAndCSS/">HTML & CSS</a></li>
+                <li><a href="./JavaScript/index.html">JavaScript</a></li>
+                <li><a href="./HTMLAndCSS/index.html">HTML & CSS</a></li>
             </ul>
         </div>
     </main>
