Fix bugs of CSS

--- a/JavaScript/LocalStorageSessionStorage.html
+++ b/JavaScript/LocalStorageSessionStorage.html
@@ -62,7 +62,7 @@
             padding: 15px;
             border: black 2px solid;
         }
-        .SeesionStrogePart li{
+        .SeesionStrogePart ul{
             text-indent: 2em;
         }
 
