--- a/JavaScript/LocalStorageSessionStorage.html
+++ b/JavaScript/LocalStorageSessionStorage.html
@@ -20,6 +20,7 @@
             height: 50px;
         }
         nav ul li{
+            background-color: #eee;
             padding: 10px 0;
             list-style: none;
             display: inline-block;
