--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             background-color: #eee;
         }
         nav{
-            background-color: #eee;
             height: 50px;
         }
-        nav ul li{
+        nav ul{
             background-color: #eee;
+        }
+        nav ul li{
             padding: 10px 0;
             list-style: none;
             display: inline-block;
