--- a/HTMLAndCSS/index.html
+++ b/HTMLAndCSS/index.html
@@ -22,6 +22,7 @@
             background-color: #eee;
         }
         nav ul li{
+            background-color: #eee;
             padding: 10px 0;
             list-style: none;
             display: inline-block;
