--- a/HTMLAndCSS/docstream.html
+++ b/HTMLAndCSS/docstream.html
@@ -67,6 +67,7 @@
     <br>
 
     <h3>2. absolute和fixed的position定位使与元素脱离文档流</h3>
+    <a href="./absolute.html">absolute定位</a>
     <div class="ex2">
         <div>aaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
 
