--- a/HTMLAndCSS/absolute.html
+++ b/HTMLAndCSS/absolute.html
@@ -29,6 +29,7 @@
             父元素设置了相对定位或绝对定位，元素会相对于离自己最近的设置了相对或绝对定位的父元素进行定位（或者说离自己最近的不是static的父元素进行定位，因为元素默认是static）。
         </p>
         <p>绝对定位会使元素脱离文档流而相对定位不会</p>
+        <a href="https://www.runoob.com/w3cnote/css-position-static-relative-absolute-fixed.html">参考</a>
     </div>
 </body>
 </html>
